--- a/gcc/configure.ac
+++ b/gcc/configure.ac
@@ -3703,9 +3703,15 @@ foo:	.long	25
 	lda	$4,foo($29)			!tprel'
 	tls_as_opt=--fatal-warnings
 	;;
-  arc*-*-*)
+  arc-*-*|arc[eb]*-*-*)
     conftest_s='
 	add_s r0,r0, @foo@tpoff'
+	;;
+  arc64-*-*)
+    conftest_s='
+	addl r0,r0, @foo@tpoff'
+	tls_first_major=2
+	tls_first_minor=23
 	;;
   cris-*-*|crisv32-*-*)
     conftest_s='
@@ -5519,9 +5525,9 @@ esac
 # ??? Once 2.11 is released, probably need to add first known working
 # version to the per-target configury.
 case "$cpu_type" in
-  aarch64 | alpha | arc | arm | avr | bfin | cris | csky | i386 | loongarch | m32c \
-  | m68k | microblaze | mips | nds32 | nios2 | pa | riscv | rs6000 | score | sparc \
-  | tilegx | tilepro | visium | xstormy16 | xtensa)
+  aarch64 | alpha | arc | arc64 | arm | avr | bfin | cris | csky | i386 | loongarch \
+  | m32c | m68k | microblaze | mips | nds32 | nios2 | pa | riscv | rs6000 | score \
+  | sparc | tilegx | tilepro | visium | xstormy16 | xtensa)
     insn="nop"
     ;;
   ia64 | s390)
