include zephyr bits to support cross-compilation
This change adds a zephyr-bits.h header file which includes the
basic definitions required to support ISO C++ thread, mutex,
condition variables, and more via POSIX. For additional details
see libgcc/gthr-posix.h .

Note: this header should not be exported; it is solely for the
purpose of enabling C++ threads in the Zephyr SDK when building
against newlib or picolibc.

Signed-off-by: Chris Friedt <cfriedt@meta.com>

--- a/configure.ac
+++ b/configure.ac
@@ -211,6 +211,14 @@ else
   is_cross_compiler=yes
 fi	
 
+# required for gthr-posix.h support in Zephyr
+case "${target}" in
+  *zephyr*)
+    CFLAGS="$CFLAGS -include `realpath $srcdir/libgcc/zephyr-bits.h`"
+    CXXFLAGS="$CXXFLAGS -include `realpath $srcdir/libgcc/zephyr-bits.h`"
+    ;;
+esac
+
 # Find the build and target subdir names.
 GCC_TOPLEV_SUBDIRS
 # Be sure to cover against remnants of an in-tree build.
