--- a/gcc/config/arm/arm-cpus.in
+++ b/gcc/config/arm/arm-cpus.in
@@ -1641,8 +1641,7 @@ end cpu cortex-m55
 begin cpu cortex-m85
  cname cortexm85
  tune flags LDSCHED
- architecture armv8.1-m.main+pacbti+mve.fp+fp.dp
- option nopacbti remove pacbti
+ architecture armv8.1-m.main+mve.fp+fp.dp
  option nomve.fp remove mve_float
  option nomve remove mve mve_float
  option nofp remove ALL_FP mve_float
