Revert "libgcc: gthr: support for --enable-threads=c11"
This reverts commit 52dc7f4a2da843d6a3d8524a040bd75e33a75c58.

Signed-off-by: Stephanos Ioannidis <root@stephanos.io>

--- a/gcc/configure.ac
+++ b/gcc/configure.ac
@@ -1994,7 +1994,7 @@ case ${enable_threads} in
     # default
     target_thread_file='single'
     ;;
-  aix | c11 | dce | lynx | mipssde | posix | rtems | \
+  aix | dce | lynx | mipssde | posix | rtems | \
   single | tpf | vxworks | win32)
     target_thread_file=${enable_threads}
     ;;
